--- a/src/components/rich-text-editor/rich-text-editor.sandbox.html
+++ b/src/components/rich-text-editor/rich-text-editor.sandbox.html
@@ -6,8 +6,13 @@
     </p>
     <p>
         <m-rich-text-editor @input="test" v-model="model"></m-rich-text-editor>
-        Model: {{ model }}
     </p>
+    <p>fonctionne avec toggle read-only</p>
+    <p>
+        <m-switch v-model="isReadOnly">
+            <span>read only?</span>
+        </m-switch>
+        <m-rich-text-editor @input="test" v-model="model" :read-only="isReadOnly"></m-rich-text-editor>
     <p>
         <async-component></async-component>
     </p>
