--- a/src/components/rich-text-editor/rich-text-editor.html
+++ b/src/components/rich-text-editor/rich-text-editor.html
@@ -1,9 +1,10 @@
 <div>
-    <div>Options: {{ internalOptions }}</div>
-    <div>ReadOnly: {{ readOnly }}</div>
+    <div>TAG: {{tag}}</div>
+    <div>readOnly: {{readOnly}}</div>
+    <div>internalOptions: {{internalOptions}}</div>
 
     <div v-if="!readOnly">
-        <froala :tag="tag" :config="internalOptions" :value="value" @input="refreshModel"></froala>
+        <m-rich-text-editor-write :tag="tag" :options="internalOptions" :value="value" @input="refreshModel"></m-rich-text-editor-write>
     </div>
     <m-rich-text-editor-read class="fr-view" :value="value" v-if="readOnly"></m-rich-text-editor-read>
 </div>
