MODUL-165 - initialize root-tree

--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -6,6 +6,6 @@
     <br>
     <br>
     <p>
-        <m-tree :tree="testArbo"></m-tree>
+        <m-tree :tree="testArbo" externalSelectedFile="/Dossier #1/Dossier #2/6chemin-vers-le-fichier-----------------------------.js"></m-tree>
     </p>
 </div>
