--- a/src/components/error-message/error-message.sandbox.html
+++ b/src/components/error-message/error-message.sandbox.html
@@ -1,22 +1,22 @@
 <div>
     <h5>default</h5>
-    <div style="border: solid 1px black;">
+    <div style="border: solid 1px black">
         <m-error-message></m-error-message>
     </div>
 
     <hr/>
 
     <h5>with #reference number</h5>
-    <m-error-message error-reference-number="123456489"></m-error-message>
+    <m-error-message reference-number="123456489"></m-error-message>
 
     <hr/>
 
     <h5>with stack trace</h5>
-    <m-error-message error-reference-number="123456489" :error="e" :stacktrace="true"></m-error-message>
+    <m-error-message reference-number="123456489" :error="e" :stacktrace="true"></m-error-message>
 
     <h5>unexpected error popup with stack</h5>
     <m-button v-m-popup:errorpopup>pop me an error</m-button>
     <m-modal ref="errorpopup" :negativeLink="false" ok-label="Fermer">
-        <m-error-message :error="e" :errorReferenceNumber="123456879" :stacktrace="true"></m-error-message>
+        <m-error-message :error="e" :referenceNumber="123456879" :stacktrace="true"></m-error-message>
     </m-modal>
 </div>
