--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -3,15 +3,13 @@
     'm--is-skin-error': skin=='error',
     'm--is-skin-warning': skin=='warning'
     }">
-    <m-icon :name="iconName" size="60px"></m-icon>
     <h2 class="m-error-template__title">{{title}}</h2>
+    <m-icon :name="iconName" size="60px"></m-icon>
     <p ref="hint" class="m-error-template__hints" v-for="hint in hints">{{hint}}</p>
     <div class="m-error-template__details">
         <slot></slot>
     </div>
     <div ref="link" class="m-error-template__links" v-for="link in links">
-        <m-link mode="link" :url="link.url" target="_blank" >
-            {{link.label}}
-        </m-link>
+        <m-link mode="link" :url="link.url" target="_blank" >{{link.label}}</m-link>
     </div>
 </div>
