MODUL-165 - Basic file selection from root

--- a/src/components/root-tree/root-tree.html
+++ b/src/components/root-tree/root-tree.html
@@ -1,1 +1,3 @@
-<m-tree :tree="tree"></m-tree>
+<div class="m-root-tree">
+    <m-tree :tree="tree" :externalSelectedFile="selectedFile" @selectFile="selectNewFile"></m-tree>
+</div>
