--- a/src/components/root-tree/root-tree.sandbox.html
+++ b/src/components/root-tree/root-tree.sandbox.html
@@ -6,6 +6,6 @@
     <br>
     <br>
     <p>
-        <m-root-tree :tree="testArbo"></m-root-tree>
+        <m-root-tree :tree="testArbo" :externalSelectedFile="currentFile"></m-root-tree>
     </p>
 </div>
