--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,15 +1,15 @@
 <div class="m-tree">
     <div v-for="file in tree">
-        <m-accordion skin="plain" v-if="haveChilds(file.childs)" class="m-tree__with-childs">
+        <m-accordion skin="plain" v-if="isAFolder(file.idFile)" class="m-tree__with-childs">
             <div slot="header">
                 <m-icon size="20px" name="m-svg__file-odf"></m-icon>
-                <span>{{ file.fileName }}</span>
+                <span :class="{'m-tree__with-childs__selected': isFileSelected(file.relativePath)}">{{ file.fileName }}</span>
             </div>
-            <m-tree :tree="file.childs" class="m-tree__with-childs__childs" :externalSelectedFile.sync="currentSelectedFile"></m-tree>
+            <m-tree :tree="file.childs" @selectFile="selectFile(file)" class="m-tree__with-childs__childs" :externalSelectedFile="externalSelectedFile"></m-tree>
         </m-accordion>
         <m-link v-else mode="button" class="m-tree__single-file" @click="selectFile(file)" :class="{'m-tree__single-file__selected': isFileSelected(file.relativePath)}">
-                <m-icon-file :extension="extensionFile(file.relativePath)"></m-icon-file>
-                <span>{{ file.fileName }}</span>
+            <m-icon-file :extension="extensionFile(file.relativePath)"></m-icon-file>
+            <span>{{ file.fileName }}</span>
         </m-link>
     </div>
 </div>
