--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -5,7 +5,7 @@
                 <m-icon size="20px" name="m-svg__file-odf"></m-icon>
                 <span :class="{'m-tree__with-childs__selected': isFileSelected(file)}">{{ file.fileName }}</span>
             </div>
-            <m-tree :tree="file.childs" @selectFile="selectFile(file)" class="m-tree__with-childs__childs" :externalSelectedFile="externalSelectedFile"></m-tree>
+            <m-tree :tree="file.childs" @selectFile="selectFile" class="m-tree__with-childs__childs" :externalSelectedFile="externalSelectedFile"></m-tree>
         </m-accordion>
         <m-link v-else mode="button" class="m-tree__single-file" @click="selectFile(file)" :class="{'m-tree__single-file__selected': isFileSelected(file)}">
             <m-icon-file :extension="extensionFile(file.relativePath)"></m-icon-file>
