MODUL-165 - Folders open when initialized

--- a/src/components/root-tree/root-tree.html
+++ b/src/components/root-tree/root-tree.html
@@ -1,3 +1,3 @@
 <div class="m-root-tree">
-    <m-tree :tree="tree" :externalSelectedFile="selectedFile" @selectFile="selectNewFile"></m-tree>
+    <m-tree :tree="tree" :externalSelectedFile="selectedFile" @selectFile="selectNewFile" @test="test" :openFolders="openFolders"></m-tree>
 </div>
