MODUL-165 Completely empty tree show a message

--- a/src/components/root-tree/root-tree.html
+++ b/src/components/root-tree/root-tree.html
@@ -1,3 +1,4 @@
 <div class="m-root-tree">
-    <m-tree :tree="tree" :externalSelectedFile="selectedFile" @selectFile="selectNewFile" :openFolders="openFolders"></m-tree>
+    <span v-if="isTreeEmpty">{{ emptyTreeTxt }}</span>
+    <m-tree v-else :tree="tree" :externalSelectedFile="selectedFile" @selectFile="selectNewFile" :openFolders="openFolders" @test="test"></m-tree>
 </div>
