MODUL-264 - part II

--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -9,7 +9,7 @@
     </p>
     <m-navbar skin="dark" :selected.sync="selectedItem">
         <m-navbar-item value="item1">
-            1
+            1 souris verte
         </m-navbar-item>
         <m-navbar-item value="item2">
             2
@@ -33,16 +33,16 @@
             8
         </m-navbar-item>
         <m-navbar-item value="item9">
-            9
+            9 singes
         </m-navbar-item>
         <m-navbar-item value="item10">
-            10
+            10 doigts et 3 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
-            11
+            11 barnacles magestueuses volant vers le lointain...
         </m-navbar-item>
         <m-navbar-item value="item12">
-            12
+            12 zaine d'oeufs
         </m-navbar-item>
     </m-navbar>
     <m-navbar v-if="showMenu" skin="simple" :selected.sync="selectedItem">
