--- a/src/components/navbar-item/navbar-item.scss
+++ b/src/components/navbar-item/navbar-item.scss
@@ -193,14 +193,12 @@ a {
     .m-navbar-item {
         font-size: $m-font-size--h5;
         font-weight: $m-font-weight--bold;
-        // color: $m-color--grey;
+        color: $m-color--grey;
         text-transform: uppercase;
         margin: $m-spacing--l;
         transition: color 0.4s ease;
         display: block;
         text-align: center;
-        background-color: pink;
-        color: #000 !important;
 
         // for multiline
         max-width: 200 + $m-spacing--l * 2;
