--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -36,24 +36,13 @@
             9 singes
         </m-navbar-item>
         <m-navbar-item value="item10">
-            10 doigts et 3 moutons
+            10 chèvres et 10 moutons
         </m-navbar-item>
         <m-navbar-item value="item11">
             11 barnacles magestueuses volant vers le lointain...
         </m-navbar-item>
         <m-navbar-item value="item12">
             12 zaine d'oeufs
-        </m-navbar-item>
-    </m-navbar>
-    <m-navbar v-if="showMenu" skin="simple" :selected.sync="selectedItem">
-        <m-navbar-item value="item6">
-            item6
-        </m-navbar-item>
-        <m-navbar-item value="item7">
-            item 7
-        </m-navbar-item>
-        <m-navbar-item value="item8">
-            item 8
         </m-navbar-item>
     </m-navbar>
 </div>
