--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -3,6 +3,7 @@
               'm--is-skin-light': skin == 'light',
               'm--is-skin-dark': skin == 'dark',
               'm--is-skin-plain': skin == 'plain',
+              'm--is-skin-soft': skin == 'soft',
               'm--is-skin-simple': skin == 'simple',
               'm--is-skin-arrow': skin == 'arrow',
               'm--is-anim-ready': animReady == true }">
