--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -27,8 +27,27 @@
         <m-navbar-item value="TVA4">TVA4</m-navbar-item>
     </m-navbar>
 
+    <h2>Skin soft</h2>
+    <m-navbar :selected.sync="selected" skin="soft" style="background: #09f">
+        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
+        <m-navbar-item value="TVA">TVA</m-navbar-item>
+        <m-navbar-item value="salut1">Salut1</m-navbar-item>
+        <m-navbar-item value="Bonjour1">Bonjour1</m-navbar-item>
+        <m-navbar-item value="TVA1">TVA1</m-navbar-item>
+        <m-navbar-item value="salut2">Salut2</m-navbar-item>
+        <m-navbar-item value="Bonjour2">Bonjour2</m-navbar-item>
+        <m-navbar-item value="TVA2">TVA2</m-navbar-item>
+        <m-navbar-item value="salut3">Salut3</m-navbar-item>
+        <m-navbar-item value="Bonjour3">Bonjour3</m-navbar-item>
+        <m-navbar-item value="TVA3">TVA3</m-navbar-item>
+        <m-navbar-item value="salut4">Salut4</m-navbar-item>
+        <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
+        <m-navbar-item value="TVA4">TVA4</m-navbar-item>
+    </m-navbar>
+
     <h2>Skin light</h2>
-    <m-navbar :selected.sync="selected"skin="light" max-width="300px">
+    <m-navbar :selected.sync="selected" skin="light" max-width="300px">
         <m-navbar-item value="salut">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
