--- a/src/components/tree/tree.scss
+++ b/src/components/tree/tree.scss
@@ -10,8 +10,8 @@
     }
 
     &__with-childs {
-        &__selected {
-            color: pink;
+        &__header {
+            cursor: pointer;
         }
 
         &__childs {
