--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,12 +1,12 @@
 <div class="m-tree">
     <div v-if="isAFolder(node.idFile)" class="m-tree__with-childs">
-        <div class="m-tree__with-childs__header" @click="openClose()">
+        <div class="m-tree__with-childs__header" @click="openClose()"  :class="{'m-tree__with-childs__header__disabled': isDisabled()}">
             <span>{{ openCloseIcon() }}</span>
             <m-icon size="20px" :name="folderIcon"></m-icon>
             <span>{{ node.fileName }}</span>
         </div>
         <transition name="m-tree__with-childs__body">
-            <div v-if="internalIsOpen" class="m-tree__with-childs__body">
+            <div v-if="isOpen" class="m-tree__with-childs__body">
                 <m-tree v-for="childs_node in node.childs" :node="childs_node" :openFolders="openFolders" :externalSelectedFile="externalSelectedFile" @selectFile="selectFile" class="m-tree__with-childs__childs"></m-tree>
             </div>
         </transition>
