--- a/src/components/error-template/error-template.html
+++ b/src/components/error-template/error-template.html
@@ -5,13 +5,15 @@
     }">
     <h1 class="m-error-template__title">{{title}}</h1>
     <div class="m-error-template__icon-container">
-        <m-icon class="m-error-template__icon" :name="iconName" size="60px"></m-icon>
+        <m-icon class="m-error-template__icon" :name="iconName" size="130px"></m-icon>
     </div>
-    <p ref="hint" class="m-error-template__hints" v-for="hint in hints">{{hint}}</p>
-    <div class="m-error-template__details">
+    <p ref="hint" class="m-error-template__hints" v-if="showHints" v-for="hint in hints">{{hint}}</p>
+    <div class="m-error-template__details" v-if="$slots['default']">
         <slot></slot>
     </div>
-    <div ref="link" class="m-error-template__links" v-for="link in links">
-        <m-link mode="link" :url="link.url" target="_blank">{{link.label}}</m-link>
-    </div>
+    <ul ref="links" v-if="showLinks" class="m-error-template__links">
+        <li v-for="link in links">
+            <m-link class="m-error-template__link" icon-name="m-svg__chevron--right" mode="link" :url="link.url" target="_blank">{{link.label}}</m-link>
+        </li>
+    </ul>
 </article>
