--- a/src/components/rich-text/rich-text.sandbox.html
+++ b/src/components/rich-text/rich-text.sandbox.html
@@ -5,7 +5,7 @@
         fonctionne sans options spécifiée
     </p>
     <p>
-        <m-rich-text-edit v-model="model"></m-rich-text-edit>
+        <m-rich-text-edit v-model="model" :label="'test123123'" max-width="large"></m-rich-text-edit>
         <m-rich-text :value="model"></m-rich-text>
     </p>
 </div>
