Weekend commit. the editor now fit into input-style when focusing / bluring.
Need to handle error management.  Required validation, etc

--- a/src/components/rich-text-edit/adapter/vue-froala.html
+++ b/src/components/rich-text-edit/adapter/vue-froala.html
@@ -1,4 +1,8 @@
-<div class="vue-froala">
+<div class="vue-froala"
+    :class="{
+        'vue-froala--focused': isFocused,
+        'vue-froala--collapsed': isInitialized && !isFocused && isEmpty
+    }">
     <component ref="editor" :is="tag"></component>
 </div>
 
