--- a/src/components/rich-text-edit/rich-text-edit.html
+++ b/src/components/rich-text-edit/rich-text-edit.html
@@ -1,3 +1,34 @@
-<div>
-    <froala :tag="tag" :config="internalOptions" :value="value" @input="refreshModel"></froala>
+<div class="m-rich-text"
+    :class="{ 'm--is-disabled' : isDisabled,
+    'm--is-waiting' : isWaiting,
+    'm--has-error' : hasTextareaError,
+    'm--is-valid' : isTextareaValid,
+    'm--is-focus' : isFocus,
+    'm--has-icon' : hasIcon,
+    'm--has-label': hasLabel }"
+    @click="onClick"
+    :style="{ width: inputWidth, maxWidth: inputMaxWidth }">
+    <m-input-style :disabled="isDisabled"
+                   :waiting="isWaiting"
+                   :error="hasTextareaError"
+                   :valid="isTextareaValid"
+                   :label="label"
+                   :label-for="id"
+                   :focus="isFocus"
+                   :empty="isEmpty"
+                   :icon-name="iconName"
+                   :required-marker="requiredMarker"
+                   :tag-style="tagStyle">
+        <froala :config="internalOptions"
+            :value="value"
+            @input="refreshModel"
+            @focus="onFocus"
+            @blur="onBlur"
+            @change="onChange"
+            @keypress.enter.prevent
+            @keyup="onKeyup"
+            @keydown="onKeydown"
+            @paste="onPaste"
+            ref="input"></froala>
+    </m-input-style>
 </div>
