--- a/src/components/rich-text-edit/rich-text-edit.html
+++ b/src/components/rich-text-edit/rich-text-edit.html
@@ -1,8 +1,8 @@
 <div class="m-rich-text"
     :class="{ 'm--is-disabled' : isDisabled,
     'm--is-waiting' : isWaiting,
-    'm--has-error' : hasTextareaError,
-    'm--is-valid' : isTextareaValid,
+    'm--has-error' : hasError,
+    'm--is-valid' : isValid,
     'm--is-focus' : isFocus,
     'm--has-icon' : hasIcon,
     'm--has-label': hasLabel }"
@@ -10,8 +10,8 @@
     :style="{ width: inputWidth, maxWidth: inputMaxWidth }">
     <m-input-style :disabled="isDisabled"
                    :waiting="isWaiting"
-                   :error="hasTextareaError"
-                   :valid="isTextareaValid"
+                   :error="hasError"
+                   :valid="isValid"
                    :label="label"
                    :label-for="id"
                    :focus="isFocus"
